mechanic service update